sprawdzanie połączenia z internetem